# encoding

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  c.mod  meson.build
base32/: base32.c  base32.h
base64/: base64.c
binary/: binary.c  binary.h
hex/: hex.c  hex.h
include/encoding/: base32.h  base64.h  binary.h  common.h  hex.h  utf16.h  utf8.h
src/: base32.c  base64.c  base64.h  hex.c  hex.h  utf16.c  utf8.c
src/encoding/: base32.c  base64.c  binary.c  common.c  compiler_extensions.h  hex.c  utf16.c  utf8.c
tests/: common.h  meson.build  strerror.c
tests/base32/: decode.c  decoded_length.c  encode.c  encoded_length.c  meson.build  valid.c
tests/base64/: decode.c  decoded_length.c  encode.c  encoded_length.c  meson.build  valid.c
tests/binary/: meson.build  uint16_decode.c  uint16_encode.c  uint32_decode.c  uint32_encode.c  uint64_decode.c  uint64_encode.c
tests/hex/: decode.c  decoded_length.c  dump.c  encode.c  encoded_length.c  meson.build  valid.c
tests/utf16/: codepoint_decode.c  codepoint_encode.c  decode.c  decoded_length.c  encode.c  encoded_length.c  meson.build  valid.c
tests/utf8/: codepoint_decode.c  codepoint_encode.c  decode.c  decoded_length.c  encode.c  encoded_length.c  meson.build  valid.c
tools/: amalgamate.c  gen_hex_char_to_nybble.c  gen_utf8_sizes.c
utf16/: utf16.c
utf8/: utf8.c  utf8.h
