uint16_decode = executable(
    'uint16_decode',
    ['uint16_decode.c', amalgamate_srcs],
    include_directories: incdirs,
    build_by_default: false,
)
test(
    'uint16_decode',
    uint16_decode,
    suite: 'binary',
)

uint16_encode = executable(
    'uint16_encode',
    ['uint16_encode.c', amalgamate_srcs],
    include_directories: incdirs,
    build_by_default: false,
)
test(
    'uint16_encode',
    uint16_encode,
    suite: 'binary',
)

uint32_decode = executable(
    'uint32_decode',
    ['uint32_decode.c', amalgamate_srcs],
    include_directories: incdirs,
    build_by_default: false,
)
test(
    'uint32_decode',
    uint32_decode,
    suite: 'binary',
)

uint32_encode = executable(
    'uint32_encode',
    ['uint32_encode.c', amalgamate_srcs],
    include_directories: incdirs,
    build_by_default: false,
)
test(
    'uint32_encode',
    uint32_encode,
    suite: 'binary',
)

uint64_decode = executable(
    'uint64_decode',
    ['uint64_decode.c', amalgamate_srcs],
    include_directories: incdirs,
    build_by_default: false,
)
test(
    'uint64_decode',
    uint64_decode,
    suite: 'binary',
)

uint64_encode = executable(
    'uint64_encode',
    ['uint64_encode.c', amalgamate_srcs],
    include_directories: incdirs,
    build_by_default: false,
)
test(
    'uint64_encode',
    uint64_encode,
    suite: 'binary',
)
